# git_wrapper

./: .coveragerc  .editorconfig  .gitignore  .mergify.yml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  dist-requirements.txt  docs-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  test.yml
docs/: .gitignore  Makefile  conf.py  git_wrapper.rst  git_wrapper.utils.rst  index.rst  installation.rst  make.bat  modules.rst  readme.md  readme.rst  usage.rst
git_wrapper/: __init__.py  base.py  branch.py  cherry.py  clone.py  commit.py  exceptions.py  log.py  rebase.py  remote.py  repo.py  tag.py
git_wrapper/utils/: decorators.py
integration_tests/: conftest.py  test_branch.py  test_clone.py  test_commit.py  test_log.py  test_rebase.py  test_remote.py  test_repo.py  test_tag.py
integration_tests/test_branch/: test-bad.patch  test.diff  test.patch
tests/: conftest.py  test_base.py  test_branch.py  test_cherry.py  test_clone.py  test_commit.py  test_git_wrapper.py  test_log.py  test_rebase.py  test_remote.py  test_repo.py  test_tag.py
tooling/: build_changelog
