[metadata]
name = git_wrapper
author = Jason Joyce
author-email = jjoyce@redhat.com
summary = Python commodity wrapper around GitPython
description-file =
    README.rst
    HISTORY.rst
home-page = https://github.com/release-depot/git_wrapper
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    git_wrapper

[files]
packages =
    git_wrapper

[aliases]
test = pytest

[tool:pytest]
addopts = tests

[flake8]
exclude = docs
