[metadata]
name = git_wrapper
author = Jason Joyce
author_email = jjoyce@redhat.com
description = Python commodity wrapper around GitPython
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
url = https://github.com/release-depot/git_wrapper
project_urls =
    Bug Tracker = https://github.com/release-depot/git_wrapper/issues
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    git_wrapper

[options]
package_dir =
    = .
packages = find:
install_requires =
    GitPython
    future
    wrapt

[options.extras_require]
test =
    flake8
    mock>=2.0.0
    pytest
    pytest-cov
    pytest-datadir
    pytest-runner
    tox

docs =
    sphinx==4.1.2
    sphinx-autobuild==2021.3.14
    sphinx-rtd-theme==0.5.2

dist =
    build
    setuptools_scm
    twine

[flake8]
exclude = docs
