[metadata]
name = git_wrapper
author = Jason Joyce
author_email = jjoyce@redhat.com
description = Python commodity wrapper around GitPython
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/release-depot/git_wrapper
project_urls =
    Bug Tracker = https://github.com/release-depot/git_wrapper/issues
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
keywords =
    git_wrapper

[options]
package_dir =
    = .
packages = find:
install_requires =
    GitPython
    wrapt

[options.extras_require]
devbase =
    tox
test =
    flake8
    mock>=2.0.0
    pytest
    pytest-cov
    pytest-datadir
    pytest-runner

docs =
    sphinx==4.1.2
    sphinx-autobuild==2021.3.14
    sphinx-rtd-theme==0.5.2
    myst-parser==0.15.2

dist =
    build
    setuptools_scm
    twine

[flake8]
exclude = docs
